finish prelim computation